fix(small fixes): add missing spacing and change active tab

--- a/client/src/components/Domain/Files/List/EventsListItem/EventListItem.module.scss
+++ b/client/src/components/Domain/Files/List/EventsListItem/EventListItem.module.scss
@@ -60,6 +60,7 @@
     }
 
     .contentContainer {
+        padding: spacing(2) spacing(7) spacing(2) 0;
         .titleContainer {
             display: flex;
             margin-bottom: spacing(2);
